--- a/src/components/Locales/ka/SignIn-SignUp.json
+++ b/src/components/Locales/ka/SignIn-SignUp.json
@@ -1,5 +1,5 @@
 {
-  "Email": "ფოსტა",
+  "Email": "ელ ფოსტა",
   "email": {
     "required": "ელ.ფოსტა აუცილებელია",
     "invalid": "გთხოვთ, შეიყვანოთ სწორი ელფოსტის მისამართი",
@@ -22,5 +22,13 @@
   },
   "bio": {
     "maxLength": "ბიო არ შეიძლება იყოს 500 სიმბოლოზე მეტი"
-  }
+  },
+  "SignIn": "შესვლა",
+  "Register": "რეგისტრაცია",
+  "Submit": "შესვლა",
+  "EnterYourPassword": "შეიყვანეთ თქვენი პაროლი",
+  "EnterYourEmail": "შეიყვანეთ თქვენი ელ.ფოსტა",
+  "Password": "პაროლი",
+  "Welcome": "კეთილი იყოს თქვენი მობრძანება რეგისტრაციის გვერდზე!",
+  "AlreadyHaveAccount": "თუ უკვე გაქვთ ანგარიში, გთხოვთ შეხვიდეთ"
 }
