--- a/src/components/Locales/ka/main.json
+++ b/src/components/Locales/ka/main.json
@@ -14,5 +14,40 @@
     "Machine Learning": "მანქანური სწავლება",
     "Markets": "მარკეტები",
     "Analysis": "ანალიზი"
+  },
+  "Cart": "კალათა",
+  "AddtoCart": "კალათაში დამატება",
+  "SelectCategory": "კატეგორიის არჩევა",
+  "PopularCategories": "პოპულარული კატეგორიები",
+  "EmptyCart": "თქვენი კალათა ცარიელია",
+  "ClearCart": "კალათის გასუფთავება",
+  "FeaturedAuthors": "გამორჩეული ავტორები",
+  "SearchBooks": "მოძებნე ნებისმიერი წიგნი",
+  "NoBooksFound": "წიგნები ვერ მოიძებნა",
+  "LoadingBooks": "წიგნები იტვირთვება",
+  "NoDescription": "აღწერა არ არის",
+  "NoAuthors": "ავტორი არ არის",
+  "BestSellers": "ბესტსელერი",
+  "Books": {
+    "GreatGatsby": {
+      "Title": "დიდი გეტსბი",
+      "Description": "კლასიკური რომანი, რომელიც დაწერილია ფრენსის სკოტ ფიცჯერალდის მიერ..."
+    },
+    "ToKillAMockingbird": {
+      "Title": "ნადირობის მოკვლა",
+      "Description": "ჰარპერ ლის პულიცერის პრემიის მქონე რომანი..."
+    },
+    "1984": {
+      "Title": "1984",
+      "Description": "ჯორჯ ორუელის დისტოპიური რომანი '1984' აშუქებს ტოტალიტარიზმისა და უკიდურესი პოლიტიკური იდეოლოგიის საფრთხეებს, წარმოდგენილ მომავლის საზოგადოებაში, რომელიც მუდმივად მეთვალყურეობაშია და კონტროლის ქვეშ იმყოფება."
+    },
+    "PrideandPrejudice": {
+      "Title": "სიამაყე და ცრურწმენა",
+      "Description": "ჯეინ ოსტინის საყვარელი რომანი 'სიამაყე და ცრურწმენა' აღწერს ელისაბედ ბენეტის ცხოვრებას, რომელიც მიმართულია კლასის, ოჯახისა და სიყვარულის საკითხებზე XIX საუკუნის დასაწყისის ინგლისში."
+    },
+    "MobyDick": {
+      "Title": "მობი დიკი",
+      "Description": "'მობი დიკი' ჰერმან მელვილის მიერ მოგვითხრობს კაპიტან ახაბის ობსესიურ მისწრაფებას დიდი თეთრი ვეშაპის დაჭერისთვის, რომელიც იკვლევს შურისძიების, ბედისწერისა და ადამიანის ბუნებასთან ბრძოლის თემებს."
+    }
   }
 }
