--- a/src/components/Locales/ka/nav.json
+++ b/src/components/Locales/ka/nav.json
@@ -1,7 +1,10 @@
 {
   "Home": "მთავარი",
   "Write": "წერა",
-  "About": "შესახებ",
+  "About": "ჩვენს შესახებ",
   "English": "ინგლისური",
-  "Georgian": "ქართული"
+  "Georgian": "ქართული",
+  "CreateReview": "შეფასების დატოვება",
+  "LogOut": "გასვლა",
+  "Login": "შესვლა"
 }
