--- a/src/components/Locales/ka/profile.json
+++ b/src/components/Locales/ka/profile.json
@@ -1,28 +1,20 @@
 {
-  "profile": {
-    "username": {
-      "required": "Требуется имя пользователя"
-    },
-    "fullname": {
-      "required": "Требуется полное имя"
-    },
-    "email": {
-      "required": "Требуется адрес электронной почты",
-      "invalid": "Неверный адрес электронной почты"
-    },
-    "labels": {
-      "username": "Имя пользователя",
-      "fullname": "Полное имя",
-      "email": "Адрес электронной почты",
-      "avatar": "URL-адрес аватара"
-    },
-    "error": {
-      "loading": "Ошибка загрузки профиля. Повторите попытку."
-    }
-  },
-  "common": {
-    "loading": "Загрузка...",
-    "updating": "Обновление...",
-    "submit": "Отправить"
-  }
+  "UserName": "მომხმარებელის სახელი",
+  "FullName": "სრული სახელი",
+  "Email": "ელ. ფოსტა",
+  "Phone": "ტელეფონი",
+  "Address": "მისამართი",
+  "City": "ქალაქი",
+  "Country": "ქვეყანა",
+  "PostalCode": "საფოსტო კოდი",
+  "Save": "შენახვა",
+  "Cancel": "გაუქმება",
+  "Edit": "რედაქტირება",
+
+  "ChangePassword": "პაროლის შეცვლა",
+  "OldPassword": "ძველი პაროლი",
+  "NewPassword": "ახალი პაროლი",
+  "ConfirmPassword": "პაროლის დადასტურება",
+  "Password": "პაროლი",
+  "Saving": "მიმდინარეობს შენახვა..."
 }
