--- a/src/components/Locales/en/profile.json
+++ b/src/components/Locales/en/profile.json
@@ -1,28 +1,19 @@
 {
-  "profile": {
-    "username": {
-      "required": "Username is required"
-    },
-    "fullname": {
-      "required": "Full name is required"
-    },
-    "email": {
-      "required": "Email is required",
-      "invalid": "Invalid email address"
-    },
-    "labels": {
-      "username": "Username",
-      "fullname": "Full Name",
-      "email": "Email",
-      "avatar": "Avatar URL"
-    },
-    "error": {
-      "loading": "Error loading profile. Please try again."
-    }
-  },
-  "common": {
-    "loading": "Loading...",
-    "updating": "Updating...",
-    "submit": "Submit"
-  }
+  "UserName": "User Name",
+  "FullName": "Full Name",
+  "Email": "Email",
+  "Phone": "Phone",
+  "Address": "Address",
+  "City": "City",
+  "Country": "Country",
+  "PostalCode": "Postal Code",
+  "Save": "Save",
+  "Cancel": "Cancel",
+  "Edit": "Edit",
+  "ChangePassword": "Change Password",
+  "OldPassword": "Old Password",
+  "NewPassword": "New Password",
+  "ConfirmPassword": "Confirm Password",
+  "Password": "Password",
+  "Saving": "Saving..."
 }
