--- a/src/components/Locales/en/review.json
+++ b/src/components/Locales/en/review.json
@@ -12,5 +12,6 @@
   "UpdateReview": "Update Review",
   "EditBookReview": "Edit Book Review",
   "NoBooksFound": "No Books Found",
-  "BookReviews": "Leave Your Feedback"
+  "BookReviews": "Leave Your Feedback",
+  "CreatedBy": "Created By"
 }
