--- a/src/components/Locales/ka/review.json
+++ b/src/components/Locales/ka/review.json
@@ -12,5 +12,6 @@
   "UpdateReview": "განახლება",
   "EditBookReview": "წიგნის რევიუს რედაქტირება",
   "NoBooksFound": "წიგნები არ მოიძებნა",
-  "BookReviews": "დატოვეთ თქვენი ფიდბექი"
+  "BookReviews": "დატოვეთ თქვენი ფიდბექი",
+  "CreatedBy": "შექმნილია"
 }
